Change cmake configuration

--- a/src/date_wrapper/CMakeLists.txt
+++ b/src/date_wrapper/CMakeLists.txt
@@ -1,19 +1,13 @@
-cmake_minimum_required(VERSION 3.8)
-
 set(MODULE date_wrapper)
 
 project(${MODULE})
-
-set(SOURCE_FILES
-)
 
 set(HEADER_FILES_FOR_CLION
     include/date_wrapper/DateTime.h
     include/date_wrapper/TimeSpan.h
 )
 
-include(ExternalProject)
-include(CMakeLists-datelib.txt)
+set(THIRD_PARTY_LIBS_FOLDER third_party)
 
 add_library(${MODULE} INTERFACE)
 
@@ -27,11 +21,29 @@ add_dependencies(${MODULE} DateLib)
 #     message(${CMAKE_COMPILER_ID} "compiler might not be supported yet.")
 # endif()
 
+# Download date lib at configure time
+message("Downloading date")
+configure_file(CMakeLists-datelib.txt date-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/date-download )
+if(result)
+  message(FATAL_ERROR "CMake download step for date failed: ${result}")
+endif()
+message("Downloaded date")
+# message("Building date")
+# execute_process(COMMAND ${CMAKE_COMMAND} --build .
+  # RESULT_VARIABLE result
+  # WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/date-download )
+# if(result)
+  # message(FATAL_ERROR "Build step for date failed: ${result}")
+# endif()
+# message("date built successfully")
+
 target_include_directories(${MODULE}
     INTERFACE include
+	${CMAKE_CURRENT_SOURCE_DIR}/${THIRD_PARTY_LIBS_FOLDER}/date/include
 )
-
-target_link_libraries(${MODULE} INTERFACE DateLib)
 
 target_compile_features(${MODULE} INTERFACE cxx_std_17)
 
@@ -40,5 +52,3 @@ if (WIN32)
 else()
     install(TARGETS ${MODULE} LIBRARY DESTINATION ${LIBRARY_INSTALL_PATH_SUFFIX})
 endif()
-
-
