Take advantage of new CMake feature FetchContent to download dependencies

--- a/src/date_wrapper/CMakeLists.txt
+++ b/src/date_wrapper/CMakeLists.txt
@@ -7,11 +7,10 @@ set(HEADER_FILES_FOR_CLION
     include/date_wrapper/TimeSpan.h
 )
 
-set(THIRD_PARTY_LIBS_FOLDER third_party)
+# Download date lib at configure time
+include(CMakeLists-datelib.txt)
 
 add_library(${MODULE} INTERFACE)
-
-add_dependencies(${MODULE} DateLib)
 
 # if("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
 #     target_compile_options(${MODULE} PUBLIC ${CLANG_COMPILE_OPTIONS})
@@ -21,28 +20,9 @@ add_dependencies(${MODULE} DateLib)
 #     message(${CMAKE_COMPILER_ID} "compiler might not be supported yet.")
 # endif()
 
-# Download date lib at configure time
-message("Downloading date")
-configure_file(CMakeLists-datelib.txt date-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/date-download )
-if(result)
-  message(FATAL_ERROR "CMake download step for date failed: ${result}")
-endif()
-message("Downloaded date")
-# message("Building date")
-# execute_process(COMMAND ${CMAKE_COMMAND} --build .
-  # RESULT_VARIABLE result
-  # WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/date-download )
-# if(result)
-  # message(FATAL_ERROR "Build step for date failed: ${result}")
-# endif()
-# message("date built successfully")
-
 target_include_directories(${MODULE}
     INTERFACE include
-	${CMAKE_CURRENT_SOURCE_DIR}/${THIRD_PARTY_LIBS_FOLDER}/date/include
+    ${CMAKE_BINARY_DIR}/_deps/date_lib-src/include
 )
 
 target_compile_features(${MODULE} INTERFACE cxx_std_17)
