--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,34 +3,8 @@ project(${PROJECT_TESTS})
 
 find_package(Threads REQUIRED)
 
-# Download and unpack googletest at configure time
-message("Downloading google test")
-configure_file(CMakeLists-gtest.txt googletest-download/CMakeLists.txt)
-execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-endif()
-message("Downloaded google test")
-message("Building google test")
-execute_process(COMMAND ${CMAKE_COMMAND} --build .
-  RESULT_VARIABLE result
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-if(result)
-  message(FATAL_ERROR "Build step for googletest failed: ${result}")
-endif()
-message("Google test built successfully")
-
-# Prevent overriding the parent project's compiler/linker
-# settings on Windows
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-# Add googletest directly to our build. This defines
-# the gtest and gtest_main targets.
-add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-                 EXCLUDE_FROM_ALL)
+# Download GTest at configure time
+include(CMakeLists-gtest.txt)
 
 target_include_directories(gmock_main SYSTEM BEFORE INTERFACE
     "${gtest_SOURCE_DIR}/include" "${gmock_SOURCE_DIR}/include")
