Update google test cmake configuration
* Update gtest to release-1.8.1
* Remove workarounds for previous gtest version
* Remove legacy stuff from date_wrapper configuration

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,7 +7,8 @@ find_package(Threads REQUIRED)
 include(CMakeLists-gtest.txt)
 
 target_include_directories(gmock_main SYSTEM BEFORE INTERFACE
-    "${gtest_SOURCE_DIR}/include" "${gmock_SOURCE_DIR}/include")
+    "$<BUILD_INTERFACE:${gtest_SOURCE_DIR}/include>"
+    "$<BUILD_INTERFACE:${gmock_SOURCE_DIR}/include>")
 
 add_subdirectory(date_wrapper_tests)
 
