--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,9 @@ set(PROJECT date_wrapper_project)
 
 project(${PROJECT})
 
-set("${PROJECT}_BINARY_DIR" bin)
-set("${PROJECT}_SOURCE_DIR" src)
-set("${PROJECT}_LIB_DIR" lib)
-set("${PROJECT}_ARCHIVE_DIR" lib/static)
-
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${${PROJECT}_BINARY_DIR})
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${${PROJECT}_LIB_DIR})
-set(ARCHIVE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/${${PROJECT}_ARCHIVE_DIR})
-
-set(EXECUTABLE_INSTALL_PATH_SUFFIX bin)
-set(LIBRARY_INSTALL_PATH_SUFFIX lib)
-set(THIRD_PARTY_LIBS_FOLDER third_party)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib/static)
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
 
@@ -26,9 +17,6 @@ if (!WIN32)
     set(CMAKE_MODULE_PATH ${ECM_MODULE_DIR})
     include(ECMEnableSanitizers)
 endif()
-
-set(EXECUTABLE_INSTALL_PATH_SUFFIX bin)
-set(LIBRARY_INSTALL_PATH_SUFFIX lib)
 
 add_subdirectory(src/date_wrapper)
 
