Cleaned library from no longer needed stuff
* Names DateRange and DateTimeRange are more expressive
* Remove all duration-related functions on DateTime
* Move methods to free functions where possible

--- a/tests/date_wrapper_tests/CMakeLists.txt
+++ b/tests/date_wrapper_tests/CMakeLists.txt
@@ -9,10 +9,10 @@ add_executable(${MODULE_TEST} ${SOURCE_FILES})
 target_sources(${MODULE_TEST}
     PRIVATE
         "${CMAKE_CURRENT_LIST_DIR}/test_date.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/test_date_span.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/test_date_range.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/test_datetime.cpp"
         "${CMAKE_CURRENT_LIST_DIR}/test_iso_date.cpp"
-        "${CMAKE_CURRENT_LIST_DIR}/test_time_span.cpp"
+        "${CMAKE_CURRENT_LIST_DIR}/test_date_time_range.cpp"
 )
 
 target_link_libraries(${MODULE_TEST} date_wrapper gtest_main)
