Update gtest to v1.10.0

--- a/src/date_wrapper/CMakeLists.txt
+++ b/src/date_wrapper/CMakeLists.txt
@@ -1,20 +1,16 @@
-set(MODULE date_wrapper)
-
-project(${MODULE})
-
 # Download date lib at configure time
 include(CMakeLists-datelib.txt)
 
-add_library(${MODULE} INTERFACE)
+add_library(date_wrapper INTERFACE)
 
-target_sources(${MODULE}
+target_sources(date_wrapper
     INTERFACE
         "${CMAKE_CURRENT_LIST_DIR}/include/date_wrapper/date_wrapper.h"
 )
 
-target_include_directories(${MODULE}
+target_include_directories(date_wrapper
     INTERFACE include
     ${CMAKE_BINARY_DIR}/_deps/date_lib-src/include
 )
 
-target_compile_features(${MODULE} INTERFACE cxx_std_17)
+target_compile_features(date_wrapper INTERFACE cxx_std_17)
